--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,4 +5,4 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-4r %-5p [%C{1}] - %m%n
 
-log4j.logger.com.palarran.kitesizer=INFO
+log4j.logger.com.palarran.kitesizer=DEBUG
